@@ -3,17 +3,27 @@
 
 steam 个人数据观测塔 进阶版
 
+### JVM 参数
+```text
+-Xms8G 
+-Xmx8G
+-XX:+UseZGC
+-XX:+HeapDumpBeforeFullGC
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/Users/$USER/Workspaces/IdeaProjects/steam-tower-enhance/heapdump/
+```
+
 ### 开发进度
 
-- [ ] player basic
+- [x] player basic
 - [ ] player function
-- [ ] app basic
+- [x] app basic
 - [ ] app function
 - [ ] owned_games basic
 - [ ] owned_games function
 - [ ] player_achievements basic
 - [ ] player_achievements function
-- [ ] friends basic
+- [x] friends basic
 - [ ] friends function
 - [ ] steam_level
 - [ ] resolve_vanity_url
